# Project-29-2024

./: .gitignore  README.md
Common_Interfaces/project29_interfaces/: CMakeLists.txt  package.xml
My_Strong_Computer/mauro_prototype_control/: CMakeLists.txt  package.xml
My_Strong_Computer/mauro_prototype_control/include/mauro_prototype_control/: prototype_joy_controller_class.hpp
My_Strong_Computer/mauro_prototype_control/launch/: gazebo.launch.py  joystick.launch.py  mauro_joy.launch.py  real_robot.launch.py
My_Strong_Computer/mauro_prototype_control/mauro_prototype_control/: people_detector.py
My_Strong_Computer/mauro_prototype_control/src/: prototype_joy_controller_class.cpp  prototype_joy_driver.cpp
My_Strong_Computer/mauro_prototype_description/: CMakeLists.txt  package.xml
My_Strong_Computer/mauro_prototype_description/launch/: display.launch.xml
My_Strong_Computer/mauro_prototype_description/rviz/: urdf_config.rviz
My_Strong_Computer/mauro_prototype_description/urdf/: mauro_prototype.urdf.xacro
RaspberryPi/gpio_controller/: package.xml  setup.py
RaspberryPi/gpio_controller/gpio_controller/: ser_com_subscriber.py
RaspberryPi/project29_interfaces/: CMakeLists.txt  package.xml
RaspberryPi/sensors_pkg/: CMakeLists.txt  package.xml
RaspberryPi/sensors_pkg/sensors_pkg/: prototype_camera_publisher.py  prototype_people_detector.py
RaspberryPi/sensors_pkg/src/: driver_mpu6050.cpp
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
isaac_ws/maps/: isaac_warehouse.pgm  isaac_warehouse.yaml
isaac_ws/src/calc_odom/: package.xml  setup.py
isaac_ws/src/calc_odom/calc_odom/: complex_lidar_odometry_node.py  imu_odometry_node.py  isaac_script_imu_odom.py  kalman_filter.py  lidar_odometry_node.py
isaac_ws/src/calc_odom/launch/: lidar_odom.launch.py
isaac_ws/src/g3_cartographer/: CMakeLists.txt  package.xml
isaac_ws/src/g3_cartographer/config/: g3_3d.lua
isaac_ws/src/g3_cartographer/launch/: g3_3d.launch.py  occupancy_grid.launch.py
isaac_ws/src/g3_cartographer/urdf/: g3_robot.urdf
isaac_ws/src/g4_robot_description/: CMakeLists.txt  package.xml
isaac_ws/src/g4_robot_description/launch/: display.launch.xml  gazebo.launch.py  isaac.launch.py  isaac_g4_robots_init.launch.py  joystick.launch.py  lidar_odom.launch.py
isaac_ws/src/g4_robot_description/rviz/: urdf_config.rviz
isaac_ws/src/g4_robot_description/src/: isaac_diff_drive_controller.cpp  isaac_script.py  my_diff_drive_controller.cpp  people_script.txt
isaac_ws/src/g4_robot_description/urdf/: g4_robot.urdf  g4_robot.urdf.xacro  lidar.xacro  lidar_gazebo.xacro  mobile_robot.xacro  mobile_robot_gazebo.xacro  mobile_robot_isaac_sim.xacro
isaac_ws/src/my_yolo/: package.xml  setup.cfg  setup.py
isaac_ws/src/my_yolo/my_yolo/: cam_pub.py  people_avoidance.py  robot_navigator.py  test1.py
isaac_ws/src/ur10e_controller/: CMakeLists.txt  package.xml
isaac_ws/src/ur10e_controller/src/: spin_arm.cpp  ur10e_position_controller.cpp
isaac_ws/src/ur10e_controller/urdf/: ur10e_robot.urdf
isaac_ws/src/yolo_boxes_detection/: package.xml  setup.cfg  setup.py
isaac_ws/src/yolo_boxes_detection/yolo_boxes_detection/: yolo_boxes_detection.py
isaac_ws/src/yolo_person_detection/: package.xml  setup.py
isaac_ws/src/yolo_person_detection/yolo_person_detection/: yolo_person_detection_node.py
log/: latest_build  latest_list
src/prototype_description/: CMakeLists.txt  package.xml
